syntax = "proto3";

option csharp_namespace = "Morai.Proto";

package Morai.Proto;

// The greeting service definition.
service MoraiService {      
  rpc Test(HelloRequest) returns (stream HelloReply) {}
  rpc CreateVehicle(CreateVehicleParam) returns (VehicleInfo) {}
}

message Vector3 {
	double x = 1;
	double y = 2;
	double z = 3;
}

message CreateVehicleParam {
	string name = 1;	
	Vector3 position = 2;	
}

message VehicleInfo {
	string name = 1;
	//int id = 2;
	Vector3 position = 2;
}

// The response message containing the greetings
message VoidMessage{
}

message HelloRequest{
	string name = 1;
}

message HelloReply {
  string message = 1;
}